Better max-width for narrower page: make sure supporter graphics are visible for windows > 1024px but less than 1290px.

--- a/htdocs/sites/all/themes/wk_bartik/css/wk_bartik.css
+++ b/htdocs/sites/all/themes/wk_bartik/css/wk_bartik.css
@@ -677,9 +677,26 @@ a.site5 {
   min-height: 600px;
 }
 
+@media all and (min-width: 1400px) {
+
+  .page-with-background #page-wrapper
+  {
+    max-width: 1290px;
+  }
+
+}
+
+@media all and (max-width: 1399px) {
+
+  .page-with-background #page-wrapper
+  {
+    max-width: 1024px;
+  }
+
+}
+
 .page-with-background #page-wrapper
 {
-  max-width: 1290px;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
